--- a/templates/template.html
+++ b/templates/template.html
@@ -12,9 +12,9 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
-    <body>
+    <body style='position: relative; width:1200px;'>
         <!--Make sure the form has the autocomplete function switched off:-->
-    <form autocomplete="off" action="/action_page.php">
+    <form autocomplete="off" action="/action_page.php" style='position:sticky;'>
         <div class="autocomplete" style="width:300px;">
             <input id="myInput" type="text" name="playerName" placeholder="Player Name">
         </div>
@@ -52,6 +52,18 @@
             {{params.BLK_script|safe}}
             {{params.BLK_div|safe}}
         </div>
+        <div id='ft_pctPlot', style='position:relative; left:800px; top:-1250px;'>
+            {{wedge_params.FT_PCT_script|safe}}
+            {{wedge_params.FT_PCT_div|safe}}
+        </div>
+        <div id='fg_pctPlot', style='position:relative; left:1050px; top:-1250px;'>
+            {{wedge_params.FG_PCT_script|safe}}
+            {{wedge_params.FG_PCT_div|safe}}
+        </div>
+        <div id='fg3_pctPlot', style='position:relative; left:550px; top:-1500px;'>
+            {{wedge_params.FG3_PCT_script|safe}}
+            {{wedge_params.FG3_PCT_div|safe}}
+        </div>    
     </div>
     <script src="{{url_for('static', filename='player_selection.js')}}"></script>
 
