--- a/templates/template.html
+++ b/templates/template.html
@@ -1,5 +1,72 @@
 <!DOCTYPE html>
-<head>
+<head>    
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+/* javascript,html and css search bar code adjusted from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_autocomplete */ 
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font: 16px Arial;  
+}
+
+/*the container must be positioned relative:*/
+.autocomplete {
+  position: relative;
+  display: inline-block;
+}
+
+input {
+  border: 1px solid transparent;
+  background-color: #f1f1f1;
+  padding: 10px;
+  font-size: 16px;
+}
+
+input[type=text] {
+  background-color: #f1f1f1;
+  width: 100%;
+}
+
+input[type=submit] {
+  background-color: DodgerBlue;
+  color: #fff;
+  cursor: pointer;
+}
+
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  left: 0;
+  right: 0;
+}
+
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff; 
+  border-bottom: 1px solid #d4d4d4; 
+}
+
+/*when hovering an item:*/
+.autocomplete-items div:hover {
+  background-color: #e9e9e9; 
+}
+
+/*when navigating through the items using the arrow keys:*/
+.autocomplete-active {
+  background-color: DodgerBlue !important; 
+  color: #ffffff; 
+}
+</style>
+
 
     <title>NBA Dashboard 2018-19</title>
     <script src='//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
@@ -14,11 +81,11 @@
 </head>
     <body style='position: relative; width:1200px;'>
         <!--Make sure the form has the autocomplete function switched off:-->
-    <form autocomplete="off" action="/action_page.php" style='position:sticky;'>
+    <form autocomplete="off" action="/action_page.php">
         <div class="autocomplete" style="width:300px;">
             <input id="myInput" type="text" name="playerName" placeholder="Player Name">
         </div>
-        <input type="submit">
+        <input type="submit" value="Search">
     </form>
         <div id='player_info'>
         <p>Name: {{player_info.DISPLAY_FIRST_LAST|safe}}</p>
@@ -65,6 +132,7 @@
             {{wedge_params.FG3_PCT_div|safe}}
         </div>    
     </div>
+    <script>var players = {{player_list.players|safe}}</script>
     <script src="{{url_for('static', filename='player_selection.js')}}"></script>
 
 </body>
