--- a/templates/template.html
+++ b/templates/template.html
@@ -74,19 +74,22 @@ input[type=submit] {
     <link rel="stylesheet" href="//cdn.pydata.org/bokeh/release/bokeh-1.0.4.min.css" type="text/css" />
     <script type="text/javascript" src="//cdn.pydata.org/bokeh/release/bokeh-1.0.4.min.js"></script>
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
     <body style='position: relative; width:1200px;'>
         <!--Make sure the form has the autocomplete function switched off:-->
-    <form autocomplete="off" action="/action_page.php">
+    <form id='myForm' autocomplete="off" action="/" method="GET">
         <div class="autocomplete" style="width:300px;">
-            <input id="myInput" type="text" name="playerName" placeholder="Player Name">
+            <input id="myInput" type="text" name="PlayerId" placeholder="Player Name">
+            <input id="myInput2" type="text" name="SeasonId" placeholder="Player Name" value="2018-19">
         </div>
-        <input type="submit" value="Search">
+        <input type="submit" value="Search" id='mySearch'>
     </form>
+
+
         <div id='player_info'>
         <p>Name: {{player_info.DISPLAY_FIRST_LAST|safe}}</p>
         <p>Height: {{player_info.HEIGHT|safe}}</p>
